# flexiv_rizon_4s_code

./: .gitignore  README.md
flexiv_description/: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  package.xml
flexiv_description/.docker/: Dockerfile  create_urdf.entrypoint.sh  visualize_rizon.entrypoint.sh
flexiv_description/config/: dual_arm_mounting.yaml  single_robot_mounting.yaml
flexiv_description/config/FT03/: ft_sensor_inertia.yaml  ft_sensor_kinematics.yaml  ft_sensor_visual.yaml
flexiv_description/config/Rizon10/: default_kinematics.yaml  inertia_parameters.yaml  joint_limits.yaml  visual_parameters.yaml
flexiv_description/config/Rizon10s/: default_kinematics.yaml  inertia_parameters.yaml  visual_parameters.yaml
flexiv_description/config/Rizon4/: inertia_parameters.yaml  visual_parameters.yaml
flexiv_description/config/Rizon4M/: default_kinematics.yaml  inertia_parameters.yaml  visual_parameters.yaml
flexiv_description/config/Rizon4R/: default_kinematics.yaml  inertia_parameters.yaml  visual_parameters.yaml
flexiv_description/config/Rizon4s/: default_kinematics.yaml  inertia_parameters.yaml  joint_limits.yaml  visual_parameters.yaml
flexiv_description/launch/: view_aico1.launch.py  view_aico2.launch.py  view_rizon.launch.py  view_rizon_dual.launch.py
flexiv_description/meshes/AICO1-4-V1/collision/: base_link.stl  pitch_link.stl  rise_link_bottom.stl  rise_link_top.stl
flexiv_description/meshes/AICO1-4-V2/collision/: base_link.stl  head_link.stl  link1.stl  neck_link.stl  torso_mount.stl
flexiv_description/meshes/AICO1-4-V2/visual/: link1.mtl  torso_mount.mtl
flexiv_description/meshes/AICO2-10-V1/collision/: base_link.stl  link1.stl  link2.stl
flexiv_description/meshes/AICO2-4-V1/collision/: base_link.stl  link1.stl  link2.stl
flexiv_description/meshes/AICO2-4-V1/visual/: link2.mtl
flexiv_description/rviz/: view_rizon.rviz  view_rizon_dual.rviz
flexiv_description/scripts/: create_urdf.py  create_urdf.sh  visualize_rizon.sh
flexiv_description/urdf/: aico1.urdf.xacro  aico2.urdf.xacro  rizon.urdf.xacro  rizon_dual.urdf.xacro
flexiv_description/urdf/common/: aico1_4_v1.xacro  aico1_4_v2.xacro  aico2_10_v1.xacro  aico2_4_v1.xacro  aico2_4_v2.xacro  grav_macro.xacro  rizon.ros2_control.xacro  rizon_arm.xacro  rizon_common.xacro  rizon_dual.ros2_control.xacro  rizon_robot.xacro
flexiv_moveit_codes_niwesh/: CMakeLists.txt  README.md  package.xml
flexiv_moveit_codes_niwesh/src/: flexiv_pick_place.cpp
flexiv_rdk/example/: CPackConfig.cmake  CPackSourceConfig.cmake  flexiv_rdk-config.cmake
flexiv_rdk_code/: CMakeLists.txt
flexiv_rdk_code/include/visual_servo/: realsense_camera.hpp
flexiv_rdk_code/src/: find_yellow_base.cpp  find_yellow_camera.cpp  go_home.cpp  ibvs_4_point.cpp  ibvs_basic.cpp  ibvs_single_point_translation.cpp  realsense_camera.cpp  teach_ibvs.cpp  track_yellow.cpp  visp.cpp
flexiv_ros2/: .pre-commit-config.yaml  README.md  flexiv.humble.repos
flexiv_ros2/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
flexiv_ros2/.github/workflows/: humble-binary-build.yml
flexiv_ros2/flexiv_bringup/: README.md  package.xml
flexiv_ros2/flexiv_bringup/config/: aico1_4_v1_controllers.yaml  aico1_4_v2_controllers.yaml  aico2_10_v1_controllers.yaml  aico2_4_v1_controllers.yaml  aico2_4_v2_controllers.yaml  joint_trajectory_position_publisher.yaml  rizon_controllers.yaml  rizon_dual_controllers.yaml
flexiv_ros2/flexiv_bringup/launch/: aico1.launch.py  aico1_moveit.launch.py  aico2.launch.py  aico2_moveit.launch.py  rizon.launch.py  rizon_dual.launch.py  rizon_dual_moveit.launch.py  rizon_moveit.launch.py  test_joint_trajectory_controller.launch.py
flexiv_ros2/flexiv_controllers/flexiv_robot_states_broadcaster/: CMakeLists.txt  flexiv_robot_states_broadcaster.xml  package.xml
flexiv_ros2/flexiv_controllers/flexiv_robot_states_broadcaster/include/flexiv_robot_states_broadcaster/: flexiv_robot_states.hpp  flexiv_robot_states_broadcaster.hpp
flexiv_ros2/flexiv_controllers/flexiv_robot_states_broadcaster/src/: flexiv_robot_states_broadcaster.cpp  flexiv_robot_states_broadcaster_parameters.yaml
flexiv_ros2/flexiv_controllers/gpio_controller/: CMakeLists.txt  README.md  gpio_controller.xml  package.xml
flexiv_ros2/flexiv_controllers/gpio_controller/include/gpio_controller/: gpio_controller.hpp
flexiv_ros2/flexiv_controllers/gpio_controller/src/: gpio_controller.cpp  gpio_controller_parameters.yaml
flexiv_ros2/flexiv_gripper/: CMakeLists.txt  package.xml
flexiv_ros2/flexiv_gripper/config/: flexiv_gripper_node.yaml
flexiv_ros2/flexiv_gripper/include/flexiv_gripper/: gripper_action_server.hpp
flexiv_ros2/flexiv_gripper/launch/: flexiv_gripper.launch.py
flexiv_ros2/flexiv_gripper/src/: gripper_action_server.cpp  wait_for_gripper_ready.cpp
flexiv_ros2/flexiv_hardware/: CMakeLists.txt  flexiv_hardware_interface_plugin.xml  package.xml
flexiv_ros2/flexiv_hardware/include/flexiv_hardware/: flexiv_dual_hardware_interface.hpp  flexiv_hardware_interface.hpp  visibility_control.h
flexiv_ros2/flexiv_hardware/src/: flexiv_dual_hardware_interface.cpp  flexiv_hardware_interface.cpp
flexiv_ros2/flexiv_moveit_config/: package.xml
flexiv_ros2/flexiv_moveit_config/config/: joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ompl_planning.yaml  rizon_moveit_servo_config.yaml
flexiv_ros2/flexiv_moveit_config/rviz/: moveit.rviz
flexiv_ros2/flexiv_moveit_config/srdf/: aico1.srdf.xacro  aico2.srdf.xacro  grav.srdf.xacro  rizon.srdf.xacro  rizon_dual.srdf.xacro  rizon_macro.srdf.xacro
flexiv_ros2/flexiv_msgs/: CMakeLists.txt  package.xml
flexiv_ros2/flexiv_msgs/action/: Grasp.action  Move.action
flexiv_ros2/flexiv_msgs/msg/: Mode.msg  RobotStates.msg
flexiv_ros2/flexiv_test_nodes/: README.md  package.xml  setup.py
flexiv_ros2/flexiv_test_nodes/flexiv_test_nodes/: publisher_joint_trajectory_controller.py  robot_states_monitor.py  robot_states_publisher.py
flexiv_ros2/flexiv_test_nodes/launch/: robot_states_publisher.launch.py
(+29 files in other folders)
